tests/negative/UnusedOperatorDef.mjuvix
module UnusedOperatorDef;
  infixl 12 + ;
end ;